# AnixartExportToTierList

./: .gitignore  main.py  pyproject.toml
anixarttierlist/: __init__.py  api.py  group.py  prepare.py  tools.py
