[tool.poetry]
name = "anixarttierlist"
version = "0.1.0"
description = ""
authors = ["Sergey Elpashev <elpashevs@bk.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
